--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<html>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+</head>
+
+<body>
+
 Hello world!
+
+</body>
+</html>
