Favicon moved to repository's home directory.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
   <title>Ralf Greve's Homepage</title>
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="./styles/ralf_style.css" rel="stylesheet" type="text/css">
 </head>
 
