Some links updated.

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@ Go to:
 Research Group</A>]
 <BR>
 &nbsp;&nbsp;&nbsp;
-[<A HREF="http://www.lowtem.hokudai.ac.jp/">Institute of Low Temperature
+[<A HREF="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature
 Science</A>]
 &nbsp;
 [<A HREF="https://www.hokudai.ac.jp/">Hokkaido University</A>]
