Section "Research projects" now links to researchmap.

--- a/index.html
+++ b/index.html
@@ -61,33 +61,16 @@ or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
 
 <hr>
 
-<h4>Current and recent research projects</h4>
+<h4>Research projects</h4>
 
-<ul>
-<li> <b><a href="./progris/">Projecting discharge from the Greenland ice sheet using
-     climatic forcings derived from atmosphere-ocean models</a></b>
-     <br>
-     (<a href="https://www.jsps.go.jp/">JSPS</a>
-     Grant-in-Aid for Scientific Research (A), since 2016.04).
-     </li>
-<!-- <li> <b>Development and application of a GPU-accelerated ice sheet model</b>
-          <br>
-          (<a href="https://www.jsps.go.jp/">JSPS</a>
-          Grant-in-Aid for Postdoctoral Research Fellows, 2015.04-2017.03).
-          </li> -->
-<li> <b>Numerical simulations of the dynamics of the Greenlandic Qaanaaq
-     drainage basin in the recent past and into the future</b>
-     <br>
-     (<a href="https://www2.lowtem.hokudai.ac.jp/">ILTS</a> Research Fund
-     Category&nbsp;2, 2014.04-2015.03).
-     </li>
-<li> <b><a href="./simantics/">Simulations of the evolution and dynamics of
-     the Antarctic ice sheet in past and future climates</a></b>
-     <br>
-     (<a href="https://www.jsps.go.jp/">JSPS</a>
-     Grant-in-Aid for Scientific Research (A), 2010.04-2014.03).
-     </li>
-</ul>
+<p><img src="pictures/spacer_white_1x1.png" alt="Spacer"
+   width="35"><a href="https://researchmap.jp/greve/research_projects"><img
+   src="pictures/project.png" width="77" alt="Projects"
+   style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
+   alt="Spacer" width="20">
+See the
+<a href="https://researchmap.jp/greve/research_projects">researchmap site</a>.
+</p>
 
 <hr>
 
@@ -95,7 +78,8 @@ or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
 
 <p><img src="pictures/spacer_white_1x1.png" alt="Spacer"
    width="35"><a href="publist.html"><img src="pictures/write.gif" 
-   alt="Write" style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
+   width="77" alt="Write"
+   style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
    alt="Spacer" width="20">
 <a href="publist.html">List of publications</a> (co-)authored by me
 (including work 'in press' or 'submitted').
