Entry for "Research projects" changed.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Science</a> (<a href="https://www.ees.hokudai.ac.jp/division/earth/">Division of
 Science</a>).</p>
 
 <p>For further details please have a look at my
-<a href="https://researchmap.jp/greve">profile at researchmap</a>
+<a href="https://researchmap.jp/greve">profile at Researchmap</a>
 or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
 
 <hr>
@@ -68,8 +68,8 @@ or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
    src="pictures/project.png" width="77" alt="Projects"
    style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
    alt="Spacer" width="20">
-See the
-<a href="https://researchmap.jp/greve/research_projects">researchmap site</a>.
+List of projects with me as principal or co-investigator &rarr;
+<a href="https://researchmap.jp/greve/research_projects">Researchmap</a>.
 </p>
 
 <hr>
@@ -168,7 +168,7 @@ Network (Rironnet)</a>.
 <tr><td>
 
 <p align="right">&nbsp;<br>Last modified:
-2023-10-30 by Ralf Greve
+2023-10-31 by Ralf Greve
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
