Minor edits in index.html.

--- a/index.html
+++ b/index.html
@@ -30,34 +30,9 @@
 
 <p><img src="pictures/ralf_on_spitsbergen_2010.jpg" width="135" align="left"
         alt="Ralf Greve" style="border:35px solid transparent">
-I studied physics at the
-<a href="https://www.tu-darmstadt.de/">Darmstadt University of Technology</a>
-(Technische Universit&auml;t Darmstadt), Germany, from 1985 to 1991
-(<a href="papers/1990s/91/Greve_1991_Diploma.html">diploma thesis</a>
-on granular avalanches), and then did my
-<a href="papers/1990s/95/Greve_1995_Doctor.html">doctorate</a> at the Department of Mechanics,
-Darmstadt University of Technology,
-from 1992 to 1995 on ice-sheet dynamics and thermodynamics.
-Until 2003 I worked as a
-research associate (wissenschaftlicher Mitarbeiter),
-assistant professor (wissenschaftlicher Assistent) and
-lecturer (Privatdozent) at the Department of Mechanics
-in the group of Prof. Kolumban Hutter. In early 2000, I received the
-post-doctoral lecturing qualification (habilitation) with a thesis entitled
-"<a href="papers/2000s/00/Greve_2000_Habil.html">Large-scale glaciation on Earth and on Mars</a>".
-Now I'm employed as professor for glacier and ice sheet research at the
-<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>,
-<a href="https://www.hokudai.ac.jp/">Hokkaido University</a>, Sapporo, Japan.
-I'm continuing my research related to the dynamics
-and thermodynamics of ice sheets and shelves (details below). Furthermore I'm
-involved in teaching and student supervision duties at the
-<a href="https://www.ees.hokudai.ac.jp/">Graduate School of Environmental
-Science</a> (<a href="https://www.ees.hokudai.ac.jp/division/earth/">Division of Earth System
-Science</a>).</p>
+I studied physics at the <a href="https://www.tu-darmstadt.de/">Darmstadt University of Technology</a> (Technische Universit&auml;t Darmstadt), Germany, from 1985 to 1991 (<a href="papers/1990s/91/Greve_1991_Diploma.html">diploma thesis</a> on granular avalanches), and then did my <a href="papers/1990s/95/Greve_1995_Doctor.html">doctorate</a> at the Department of Mechanics, Darmstadt University of Technology, from 1992 to 1995 on ice-sheet dynamics and thermodynamics. Until 2003 I worked as a research associate (wissenschaftlicher Mitarbeiter), assistant professor (wissenschaftlicher Assistent) and lecturer (Privatdozent) at the Department of Mechanics in the group of Prof. Kolumban Hutter. In early 2000, I received the post-doctoral lecturing qualification (habilitation) with a thesis entitled "<a href="papers/2000s/00/Greve_2000_Habil.html">Large-scale glaciation on Earth and on Mars</a>". Now I'm employed as a professor for glacier and ice sheet research at the <a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>, <a href="https://www.hokudai.ac.jp/">Hokkaido University</a>, Sapporo, Japan. I'm continuing my research related to the dynamics and thermodynamics of ice sheets and shelves (details below). Furthermore, I'm involved in teaching and student supervision duties at the <a href="https://www.ees.hokudai.ac.jp/">Graduate School of Environmental Science</a> (<a href="https://www.ees.hokudai.ac.jp/division/earth/">Division of Earth System Science</a>).</p>
 
-<p>For further details please have a look at my
-<a href="https://researchmap.jp/greve">profile at Researchmap</a>
-or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
+<p>For further details, please have a look at my <a href="https://researchmap.jp/greve">profile at Researchmap</a> (bilingual English/Japanese) or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
 
 <hr>
 
@@ -68,8 +43,7 @@ or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
    src="pictures/project.png" width="77" alt="Projects"
    style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
    alt="Spacer" width="20">
-List of projects with me as principal or co-investigator &rarr;
-<a href="https://researchmap.jp/greve/research_projects">Researchmap</a>.
+List of projects with me as principal or co-investigator &rarr; <a href="https://researchmap.jp/greve/research_projects">Researchmap</a>.
 </p>
 
 <hr>
@@ -81,8 +55,7 @@ List of projects with me as principal or co-investigator &rarr;
    width="77" alt="Write"
    style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
    alt="Spacer" width="20">
-<a href="publist.html">List of publications</a> (co-)authored by me
-(including work 'in press' or 'submitted').
+<a href="publist.html">List of publications</a> (co-)authored by me (including work 'in press' or 'submitted').
 </p>
 
 <hr>
