Some links added in the profile.

--- a/index.html
+++ b/index.html
@@ -28,18 +28,13 @@
 
 <h4>Profile</h4>
 
-<!-- <p><img src="pictures/ralf_on_spitsbergen_2010.jpg" width="135" align="left"
-        alt="Ralf Greve" style="border:35px solid transparent"> -->
-
 <p><img src="pictures/ralf_on_spitsbergen_2010.png" width="185" align="left" alt="Ralf Greve" style="border:10px solid transparent">
 Welcome to my professional website!</p> 
 
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &#x273B; &#x273B; &#x273B; &#x273B; &#x273B;</p>
 
-<p>I am a professor at Hokkaido University's Institute of Low Temperature Science in Sapporo, Japan. A physicist by training, my main focus is on the evolution, dynamics and thermodynamics of the Earth's ice sheets, using numerical modelling. I am the author/co-author of more than 100 peer-reviewed scientific papers and two textbooks on ice dynamics and continuum mechanics, serve as an Associate Chief Editor for the Journal of Glaciology and maintain the open-source ice sheet model SICOPOLIS.</p>
+<p>I am a professor at <a href="https://www.hokudai.ac.jp/">Hokkaido University</a>'s <a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a> in Sapporo, Japan. A physicist by training, my main focus is on the evolution, dynamics and thermodynamics of the Earth's ice sheets, using numerical modelling. I am the author/co-author of more than 100 peer-reviewed scientific papers and two textbooks on ice dynamics and continuum mechanics, serve as an Associate Chief Editor for the <a href="https://www.cambridge.org/core/journals/journal-of-glaciology">Journal of Glaciology </a> and maintain the open-source ice-sheet model <a href="https://www.sicopolis.net">SICOPOLIS</a>.</p>
                 
-<!-- I studied physics at the <a href="https://www.tu-darmstadt.de/">Darmstadt University of Technology</a> (Technische Universit&auml;t Darmstadt), Germany, from 1985 to 1991 (<a href="papers/1990s/91/Greve_1991_Diploma.html">diploma thesis</a> on granular avalanches), and then did my <a href="papers/1990s/95/Greve_1995_Doctor.html">doctorate</a> at the Department of Mechanics, Darmstadt University of Technology, from 1992 to 1995 on ice-sheet dynamics and thermodynamics. Until 2003 I worked as a research associate (wissenschaftlicher Mitarbeiter), assistant professor (wissenschaftlicher Assistent) and lecturer (Privatdozent) at the Department of Mechanics in the group of Prof. Kolumban Hutter. In early 2000, I received the post-doctoral lecturing qualification (habilitation) with a thesis entitled "<a href="papers/2000s/00/Greve_2000_Habil.html">Large-scale glaciation on Earth and on Mars</a>". Now I'm employed as a professor for glacier and ice sheet research at the <a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>, <a href="https://www.hokudai.ac.jp/">Hokkaido University</a>, Sapporo, Japan. I'm continuing my research related to the dynamics and thermodynamics of ice sheets and shelves (details below). Furthermore, I'm involved in teaching and student supervision duties at the <a href="https://www.ees.hokudai.ac.jp/">Graduate School of Environmental Science</a> (<a href="https://www.ees.hokudai.ac.jp/division/earth/">Division of Earth System Science</a>).</p> -->
-
 <p>For further details, please have a look at my <a href="https://researchmap.jp/greve">profile at Researchmap</a> (bilingual English/Japanese) or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
 
 <hr>
