Minor design change.

--- a/index.html
+++ b/index.html
@@ -41,25 +41,15 @@ Welcome to my professional website!</p>
 
 <h4>Research projects</h4>
 
-<p><img src="pictures/spacer_white_1x1.png" alt="Spacer"
-   width="35"><a href="https://researchmap.jp/greve/research_projects"><img
-   src="pictures/project.png" width="77" alt="Projects"
-   style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
-   alt="Spacer" width="20">
-List of projects with me as principal or co-investigator &rarr; <a href="https://researchmap.jp/greve/research_projects">Researchmap</a>.
-</p>
+<p><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="50" height="1"><a href="https://researchmap.jp/greve/research_projects"><img src="pictures/project.png" width="77" alt="Projects" style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="20" height="1">
+List of projects with me as principal or co-investigator &rarr; <a href="https://researchmap.jp/greve/research_projects">Researchmap</a>.</p>
 
 <hr>
 
 <h4>Publications</h4>
 
-<p><img src="pictures/spacer_white_1x1.png" alt="Spacer"
-   width="35"><a href="publist.html"><img src="pictures/write.gif" 
-   width="77" alt="Write"
-   style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png"
-   alt="Spacer" width="20">
-<a href="publist.html">List of publications</a> (co-)authored by me (including work 'in press' or 'submitted').
-</p>
+<p><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="50" height="1"><a href="publist.html"><img src="pictures/write.gif" width="77" alt="Write" style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="20" height="1">
+<a href="publist.html">List of publications</a> (co-)authored by me (including work 'in press' or 'submitted').</p>
 
 <hr>
 
@@ -82,26 +72,36 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <h4>Classes</h4>
 
-<p>Second semester 2023:<br>&nbsp;&nbsp;&nbsp;
+<ul>
+
+<li> Second semester 2023:
+<br>
 <b>Advanced Course in Theoretical Glaciology</b>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<br>
+&nbsp;&nbsp;&nbsp;
 [<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123498"
     target="new">HU ELMS/Moodle</a> (account required)]
-</p>
+</li>
 
-<p>Second semester 2023:<br>&nbsp;&nbsp;&nbsp;
+<li>Second semester 2023:
+<br>
 <b>Advanced Course in International Science Communication Methods</b>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<br>
+&nbsp;&nbsp;&nbsp;
 [<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123476"
     target="new">HU ELMS/Moodle</a> (account required)]
-</p>
+</li>
 
-<p>First semester 2023:<br>&nbsp;&nbsp;&nbsp;
+<li>First semester 2023:
+<br>
 <b>Fundamental Course in Cold Region Sciences</b>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<br>
+&nbsp;&nbsp;&nbsp;
 [<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123484"
     target="new">HU ELMS/Moodle</a> (account required)]
-</p>
+</li>
+
+</ul>
 
 <hr>
 
