Minor design change.

--- a/index.html
+++ b/index.html
@@ -107,14 +107,9 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <h4>Office contact</h4>
 
-<p>For office contact information please see
-<a href="./contact.html">here</a>.
-</p>
+<p>For office contact information please see <a href="./contact.html">here</a>.</p>
 
-<p style="text-align:center">
-<img src="pictures/trees.gif"
-     alt="Trees"><img src="pictures/trees.gif" alt="Trees">
-</p>
+<p style="text-align:center"><img src="pictures/trees.png" alt="Trees"></p>
 
 <hr>
 
@@ -122,19 +117,16 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 Go to:
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet
-Research Group</a>]
+[<a href="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet Research Group</a>]
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature
-Science</a>]
+[<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
 &nbsp;
 [<a href="https://www.hokudai.ac.jp/">Hokkaido University</a>]
 </p>
 
 <p class="small">
-Information about the <a href="http://wwwice.lowtem.hokudai.ac.jp/en/rironnet/">Rironseppyou
-Network (Rironnet)</a>.
+Information about the <a href="http://wwwice.lowtem.hokudai.ac.jp/en/rironnet/">Rironseppyou Network (Rironnet)</a>.
 </p>
 
 </td></tr>
