--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta name="author" content="Ralf Greve">
-  <meta name="description" content="Ralf Greve's professional homepage">
+  <meta name="description" content="Ralf Greve's homepage">
   <meta name="keywords" content="Ralf, Greve, glaciology, ice, sheet, shelf, ice-sheet, ice-shelf, glacier, cryosphere, climate, modelling">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
@@ -29,7 +29,7 @@
 <h4>Profile</h4>
 
 <p><img src="pictures/ralf_on_spitsbergen_2010.png" width="185" align="left" alt="Ralf Greve" style="border:10px solid transparent">
-Welcome to my professional website!</p> 
+Welcome to my "icy" homepage!</p>
 
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &#x273B; &#x273B; &#x273B; &#x273B; &#x273B;</p>
 
