Publication list updated. Some minor edits.

--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,19 @@
-﻿<HTML>
+﻿<html>
 
-<HEAD>
+<head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <META NAME="author" CONTENT="Ralf Greve">
-  <META NAME="description" CONTENT="Ralf Greve - Office contact">
+  <meta name="author" content="Ralf Greve">
+  <meta name="description" content="Ralf Greve - Contact information">
   <meta name="keywords" content="Ralf, Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index,follow">
-  <TITLE> Ralf Greve - Office contact </TITLE>
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/favicon.ico">
+  <title> Ralf Greve - Contact information </title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="./styles/ralf_style.css" rel="stylesheet" type="text/css">
-</HEAD>
+</head>
 
-<BODY>
+<body>
 
 <table align="center" cellpadding="25" cellspacing="0"
        bgcolor="#ffffff" width=750>
@@ -21,57 +21,55 @@
 
 <hr>
 
-<H1 style="text-align:center">Ralf Greve - Office contact</H1>
+<h1 style="text-align:center">Ralf Greve - Contact information</h1>
 
 <hr>
 
-<P><B>Address:</B><BR>
+<p><b>Address:</b><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Institute of Low Temperature Science<BR>
+Institute of Low Temperature Science<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Hokkaido University<BR>
+Hokkaido University<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Kita-19, Nishi-8, Kita-ku<BR>
+Kita-19, Nishi-8, Kita-ku<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Sapporo 060-0819<BR>
+Sapporo 060-0819<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Japan<P>
+Japan</p>
 
-<P><B>Telephone:</B><BR>
+<p><b>Telephone:</b><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-(+81)-(0)11-706-6891<P>
+(+81)-(0)11-706-6891</p>
 
-<P><B>Fax:</B><BR>
+<p><b>Fax:</b><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-(+81)-(0)11-706-7142<P>
+(+81)-(0)11-706-7142</p>
 
-<P><B>E-mail:</B><BR>
+<p><b>E-mail:</b><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 greve<img style="vertical-align:middle;" alt="&lt;at-nospam&gt;"
           src="pictures/at-nospam_13x12.png">lowtem.hokudai.ac.jp
-</P>
+</p>
 
-<P><B>Visit:</B><BR>
+<p><b>Visit:</b><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Room 307</P>
+Room 307</p>
 
 <hr>
 
-<P CLASS="SMALL">
+<p class="small">
 Go to:
-<BR>
+<br>
 &nbsp;&nbsp;&nbsp;
-[<A HREF="./index.html">Ralf Greve's Homepage</A>]
+[<a href="./index.html">Ralf Greve's Homepage</a>]
 &nbsp;
-[<A HREF="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet
-Research Group</A>]
-<BR>
+[<a href="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet Research Group</a>]
+<br>
 &nbsp;&nbsp;&nbsp;
-[<A HREF="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature
-Science</A>]
+[<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
 &nbsp;
-[<A HREF="https://www.hokudai.ac.jp/">Hokkaido University</A>]
-</P>
+[<a href="https://www.hokudai.ac.jp/">Hokkaido University</a>]
+</p>
 
 </td></tr>
 </table>
@@ -79,12 +77,11 @@ Science</A>]
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified:
-2020-09-08 by Ralf Greve
+<p align="right">&nbsp;<br>Last modified: 2023-11-01
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
 </table>
 
-</BODY>
-</HTML>
+</body>
+</html>
