--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p><img src="pictures/ralf_on_spitsbergen_2010.png" width="185" align="left" alt="Ralf Greve" style="border:10px solid transparent">
 Welcome to my "icy" homepage!</p>
 
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &#x273B; &#x273B; &#x273B; &#x273B; &#x273B;</p>
+<p style="color:rgb(0,122,201);">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &#x273B; &#x273B; &#x273B; &#x273B; &#x273B;</p>
 
 <p>I am a professor at <a href="https://www.hokudai.ac.jp/">Hokkaido University</a>'s <a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a> in Sapporo, Japan. A physicist by training, my main focus is on the evolution, dynamics and thermodynamics of the Earth's ice sheets, using numerical modelling. I am the author/co-author of more than 100 peer-reviewed scientific papers and two textbooks on ice dynamics and continuum mechanics, serve as an Associate Chief Editor for the <a href="https://www.cambridge.org/core/journals/journal-of-glaciology">Journal of Glaciology </a> and maintain the open-source ice-sheet model <a href="https://www.sicopolis.net">SICOPOLIS</a>.</p>
                 
@@ -59,9 +59,9 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 <li> <b>Ice sheet model
      <a href="https://www.sicopolis.net/">SICOPOLIS</a></b>
      <br>
-     (background process running since 1992, and no end in sight...
-     <img style="vertical-align:middle" src="pictures/smiley.gif"
-          alt="Smiley">&nbsp;).
+     (background process running since 1992, and no end in sight... &#x1F60A;).
+     <!-- <img style="vertical-align:middle" src="pictures/smiley.gif"
+          alt="Smiley">&nbsp;). -->
      </li>
 <li> <b>Mars Atmosphere-Ice Coupler
      <a href="https://doi.org/10.5281/zenodo.3696080">MAIC-2</a></b>.
@@ -105,9 +105,9 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <hr>
 
-<h4>Office contact</h4>
+<h4>Contact</h4>
 
-<p>For office contact information please see <a href="./contact.html">here</a>.</p>
+<p>For contact information, please see <a href="./contact.html">here</a>.</p>
 
 <p style="text-align:center"><img src="pictures/trees.png" alt="Trees"></p>
 
@@ -135,8 +135,7 @@ Information about the <a href="http://wwwice.lowtem.hokudai.ac.jp/en/rironnet/">
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified:
-2023-10-31 by Ralf Greve
+<p align="right">&nbsp;<br>Last modified: 2023-11-01
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
