--- a/publist.html
+++ b/publist.html
@@ -1,19 +1,19 @@
-﻿<HTML>
+﻿<html>
 
-<HEAD>
+<head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <META NAME="author" CONTENT="Ralf Greve">
-  <META NAME="description" CONTENT="Ralf Greve's publication list">
+  <meta name="author" content="Ralf Greve">
+  <meta name="description" content="Ralf Greve's publication list">
   <meta name="keywords" content="Ralf, Greve, publication, publications, abstract, abstracts">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <TITLE> Ralf Greve - List of publications </TITLE>
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/favicon.ico">
+  <title> Ralf Greve - List of publications </title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="./styles/ralf_style.css" rel="stylesheet" type="text/css">
-</HEAD>
+</head>
 
-<BODY>
+<body>
 
 <table align="center" cellpadding="25" cellspacing="0"
        bgcolor="#ffffff" width=750>
@@ -21,37 +21,36 @@
 
 <hr>
 
-<H1 style="text-align:center">Ralf Greve - List of publications</H1>
+<h1 style="text-align:center">Ralf Greve - List of publications</h1>
 
-<P style="text-align:center">[<A HREF="#Peer">Peer-reviewed
+<p style="text-align:center">[<a href="#Peer">Peer-reviewed
                                               journal articles</A>]
-&nbsp;[<A HREF="#Book">Books</A>]
-&nbsp;[<A HREF="#ArtBook">Articles in books</A>]
-&nbsp;[<A HREF="#Other">Other publications</A>]
-<BR>
+&nbsp;[<a href="#Book">Books</a>]
+&nbsp;[<a href="#ArtBook">Articles in books</a>]
+&nbsp;[<a href="#Other">Other publications</a>]
+<br>
 See also: 
 &nbsp;<img src="pictures/external_link_10x10.png"
      alt="external link" title="external link">
-<A HREF="https://www.webofscience.com/wos/author/rid/G-2336-2010">ResearcherID</A>
+<a href="https://www.webofscience.com/wos/author/rid/G-2336-2010">ResearcherID</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
      alt="external link" title="external link">
-<A HREF="https://scholar.google.co.jp/citations?user=vd8eO-oAAAAJ&hl=en">Google
-Scholar</A>
+<a href="https://scholar.google.co.jp/citations?user=vd8eO-oAAAAJ&hl=en">Google Scholar</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
      alt="external link" title="external link">
-<A HREF="https://www.scopus.com/authid/detail.uri?authorId=7003672448">Scopus</A>
+<a href="https://www.scopus.com/authid/detail.uri?authorId=7003672448">Scopus</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
      alt="external link" title="external link">
-<A HREF="https://orcid.org/0000-0002-1341-4777">ORCID</A>
-</P>
+<a href="https://orcid.org/0000-0002-1341-4777">ORCID</a>
+</p>
 
 <hr>
 
-<P>List includes publications submitted or in press. Online abstracts available by clicking on author names.</P>
+<p>List includes publications submitted or in press. Online abstracts available by clicking on author names.</p>
 
-<P><A NAME="Peer"><HR></A></P>
+<p><a name="Peer"><hr></a></p>
 
-<H3>Peer-reviewed journal articles:</H3>
+<h3>Peer-reviewed journal articles:</h3>
 
 <DL>
 
@@ -112,7 +111,7 @@ Scholar</A>
      Moore, J. C., R. Greve, C. Yue, T. Zwinger, F. Gillet-Chaulet and L. Zhao.
      2023.</A></DT>
 <DD> Reduced ice loss from Greenland under stratospheric aerosol injection.<BR>
-     <I>Journal of Geophysical Research: Earth Surface</I> (submitted).</DD>
+     <I>Journal of Geophysical Research: Earth Surface</I> (in press).</DD>
 
 <DT> <A HREF="papers/2020s/23/Seroussi_etal_2023_TC.html">
      Seroussi, H., V. Verjans, S. Nowicki, A. J. Payne,
@@ -2568,9 +2567,9 @@ Scholar</A>
 
 </DL>
 
-<P><A NAME="Book"><HR></A></P>
+<p><a name="Book"><hr></a></p>
 
-<H3>Books:</H3>
+<h3>Books:</h3>
 
 <DL>
 
@@ -2677,9 +2676,9 @@ Scholar</A>
 
 </DL>
 
-<P><A NAME="ArtBook"><HR></A></P>
+<p><a name="ArtBook"><hr></a></p>
 
-<H3>Articles in books:</H3>
+<h3>Articles in books:</h3>
 
 <DL>
 
@@ -2812,9 +2811,9 @@ Scholar</A>
 
 </DL>
 
-<P><A NAME="Other"><HR></A></P>
+<p><a name="Other"><hr></a></p>
 
-<H3>Other publications:</H3>
+<h3>Other publications:</h3>
 
 <DL>
 
@@ -3625,21 +3624,19 @@ Scholar</A>
 
 <hr>
 
-<P CLASS="SMALL">
+<p class="small">
 Go to:
-<BR>
+<br>
 &nbsp;&nbsp;&nbsp;
-[<A HREF="./index.html">Ralf Greve's Homepage</A>]
+[<a href="./index.html">Ralf Greve's Homepage</a>]
 &nbsp;
-[<A HREF="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet
-Research Group</A>]
-<BR>
+[<a href="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet Research Group</a>]
+<br>
 &nbsp;&nbsp;&nbsp;
-[<A HREF="https://www2.lowtem.hokudai.ac.jp/">Institute
-of Low Temperature Science</A>]
+[<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
 &nbsp;
-[<A HREF="https://www.hokudai.ac.jp/">Hokkaido University</A>]
-</P>
+[<a href="https://www.hokudai.ac.jp/">Hokkaido University</a>]
+</p>
 
 </td></tr>
 </table>
@@ -3647,13 +3644,12 @@ of Low Temperature Science</A>]
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified:
-2023-10-23 by Ralf Greve
+<p align="right">&nbsp;<br>Last modified: 2023-11-01
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
 </table>
 
-</BODY>
+</body>
 
-</HTML>
+</html>
