--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@ Go to:
 &nbsp;&nbsp;&nbsp;
 [<a href="./index.html">Ralf Greve's Homepage</a>]
 &nbsp;
-[<a href="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet Research Group</a>]
+[<a href="http://www.lowtem.hokudai.ac.jp/gisg/">Glacier and Ice Sheet Research Group</a>]
 <br>
 &nbsp;&nbsp;&nbsp;
 [<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
@@ -77,7 +77,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-01
+<p align="right">&nbsp;<br>Last modified: 2023-11-07
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
