--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Welcome to my "icy" homepage!</p>
 
 <p>I am a professor at <a href="https://www.hokudai.ac.jp/">Hokkaido University</a>'s <a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a> in Sapporo, Japan. A physicist by training, my main focus is on the evolution, dynamics and thermodynamics of the Earth's ice sheets, using numerical modelling. I am the author/co-author of more than 100 peer-reviewed scientific papers and two textbooks on ice dynamics and continuum mechanics, serve as an Associate Chief Editor for the <a href="https://www.cambridge.org/core/journals/journal-of-glaciology">Journal of Glaciology </a> and maintain the open-source ice-sheet model <a href="https://www.sicopolis.net">SICOPOLIS</a>.</p>
                 
-<p>For further details, please have a look at my <a href="https://researchmap.jp/greve">profile at Researchmap</a> (bilingual English/Japanese) or my <a href="cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
+<p>For further details, please have a look at my <a href="https://researchmap.jp/greve">profile at Researchmap</a> (bilingual English/Japanese) or my <a href="./cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
 
 <hr>
 
@@ -48,15 +48,15 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <h4>Publications</h4>
 
-<p><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="50" height="1"><a href="publist.html"><img src="pictures/write.gif" width="77" alt="Write" style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="20" height="1">
-<a href="publist.html">List of publications</a> (co-)authored by me (including work 'in press' or 'submitted').</p>
+<p><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="50" height="1"><a href="./publist.html"><img src="pictures/write.gif" width="77" alt="Write" style="vertical-align:middle"></a><img src="pictures/spacer_white_1x1.png" alt="Spacer" width="20" height="1">
+<a href="./publist.html">List of publications</a> (co-)authored by me (including work 'in press' or 'submitted').</p>
 
 <hr>
 
 <h4>Software development</h4>
 
 <ul>
-<li> <b>Ice sheet model
+<li> <b>Ice-sheet model
      <a href="https://www.sicopolis.net/">SICOPOLIS</a></b>
      <br>
      (background process running since 1992, and no end in sight... &#x1F60A;).
@@ -109,7 +109,7 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <p>For contact information, please see <a href="./contact.html">here</a>.</p>
 
-<p style="text-align:center"><img src="pictures/trees.png" alt="Trees"></p>
+<p style="text-align:center"><a href="./contact.html"><img src="pictures/trees.png" alt="Trees"></a></p>
 
 <hr>
 
@@ -117,7 +117,7 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 Go to:
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="http://wwwice.lowtem.hokudai.ac.jp/">Glacier and Ice Sheet Research Group</a>]
+[<a href="http://www.lowtem.hokudai.ac.jp/gisg/">Glacier and Ice Sheet Research Group</a>]
 <br>
 &nbsp;&nbsp;&nbsp;
 [<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
@@ -126,7 +126,7 @@ Go to:
 </p>
 
 <p class="small">
-Information about the <a href="http://wwwice.lowtem.hokudai.ac.jp/en/rironnet/">Rironseppyou Network (Rironnet)</a>.
+Information about the <a href="http://www.lowtem.hokudai.ac.jp/gisg/en/rironnet/">Rironseppyou Network (Rironnet)</a>.
 </p>
 
 </td></tr>
@@ -135,7 +135,7 @@ Information about the <a href="http://wwwice.lowtem.hokudai.ac.jp/en/rironnet/">
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-01
+<p align="right">&nbsp;<br>Last modified: 2023-11-07
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
