--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 Go to:
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="http://www.lowtem.hokudai.ac.jp/gisg/">Glacier and Ice Sheet Research Group</a>]
+[<a href="https://www2.lowtem.hokudai.ac.jp/gisg/">Glacier and Ice Sheet Research Group</a>]
 <br>
 &nbsp;&nbsp;&nbsp;
 [<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
@@ -126,7 +126,7 @@ Go to:
 </p>
 
 <p class="small">
-Information about the <a href="http://www.lowtem.hokudai.ac.jp/gisg/en/rironnet/">Rironseppyou Network (Rironnet)</a>.
+Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironnet/">Rironseppyou Network (Rironnet)</a>.
 </p>
 
 </td></tr>
@@ -135,7 +135,7 @@ Information about the <a href="http://www.lowtem.hokudai.ac.jp/gisg/en/rironnet/
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-07
+<p align="right">&nbsp;<br>Last modified: 2023-11-13
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
