--- a/publist.html
+++ b/publist.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -3630,7 +3630,7 @@ Go to:
 &nbsp;&nbsp;&nbsp;
 [<a href="./index.html">Ralf Greve's Homepage</a>]
 &nbsp;
-[<a href="http://www.lowtem.hokudai.ac.jp/gisg/">Glacier and Ice Sheet Research Group</a>]
+[<a href="https://www2.lowtem.hokudai.ac.jp/gisg/">Glacier and Ice Sheet Research Group</a>]
 <br>
 &nbsp;&nbsp;&nbsp;
 [<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
@@ -3644,7 +3644,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-07
+<p align="right">&nbsp;<br>Last modified: 2023-11-13
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
