--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
 
 <head>
@@ -135,7 +138,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-13
+<p align="right">&nbsp;<br>Last modified: 2023-11-15
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
