Link to Google Scholar updated.

--- a/publist.html
+++ b/publist.html
@@ -38,7 +38,7 @@ See also:
 <a href="https://www.webofscience.com/wos/author/rid/G-2336-2010">ResearcherID</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
      alt="external link" title="external link">
-<a href="https://scholar.google.co.jp/citations?user=vd8eO-oAAAAJ&hl=en">Google Scholar</a>
+<a href="https://scholar.google.co.jp/citations?user=vd8eO-oAAAAJ">Google Scholar</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
      alt="external link" title="external link">
 <a href="https://www.scopus.com/authid/detail.uri?authorId=7003672448">Scopus</a>
