Publication list updated.

--- a/papers/2020s/23/Moore_etal_2023_JGRF.html
+++ b/papers/2020s/23/Moore_etal_2023_JGRF.html
@@ -35,7 +35,13 @@ Reduced ice loss from Greenland under stratospheric aerosol injection</h2>
 
 <hr>
 
-<p><i>Journal of Geophysical Research: Earth Surface</i> (in press).</p>
+<p><i>Journal of Geophysical Research: Earth Surface</i> (in press).
+   &nbsp;
+   <img style="vertical-align:middle"
+        src="../../../pictures/external_link_10x10.png"
+        alt="external link"
+        title="external link">
+   <A HREF="https://doi.org/10.1029/2023JF007112">DOI</A></p>
 
 </td></tr>
 </table>
@@ -43,7 +49,7 @@ Reduced ice loss from Greenland under stratospheric aerosol injection</h2>
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2023-11-01</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2023-11-22</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
