--- a/publist.html
+++ b/publist.html
@@ -114,7 +114,19 @@ See also:
      Moore, J. C., R. Greve, C. Yue, T. Zwinger, F. Gillet-Chaulet and L. Zhao.
      2023.</a></dt>
 <dd> Reduced ice loss from Greenland under stratospheric aerosol injection.<br>
-     <i>Journal of Geophysical Research: Earth Surface</i> (in press).</dd>
+     <i>Journal of Geophysical Research: Earth Surface</i> (in press).<br>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="papers/2020s/23/Moore_etal_2023_JGRF.bib"><img
+     style="vertical-align:middle" src="pictures/bibtex_40x14.png"    
+     alt="BibTeX"></a>
+     |
+     <a href="papers/2020s/23/Moore_etal_2023_JGRF.ris">RIS</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/external_link_10x10.png"
+          alt="external link"
+          title="external link">
+     <a href="https://doi.org/10.1029/2023JF007112">DOI</a></dd>
 
 <dt> <a href="papers/2020s/23/Seroussi_etal_2023_TC.html">
      Seroussi, H., V. Verjans, S. Nowicki, A. J. Payne,
@@ -3647,7 +3659,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-15
+<p align="right">&nbsp;<br>Last modified: 2023-11-22
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
