--- a/papers/2020s/23/Moore_etal_2023_JGRF.html
+++ b/papers/2020s/23/Moore_etal_2023_JGRF.html
@@ -9,7 +9,7 @@
   <meta name="author" CONTENT="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <title>Moore and others (in press)</title>
+  <title>Moore and others (2023)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -31,16 +31,17 @@ Reduced ice loss from Greenland under stratospheric aerosol injection</h2>
 
 <h4 style="color:#000000;">Abstract</h4>
 
-<p>Sea level rise (SLR) due to surface melt and to dynamic losses from the ice sheets &ndash; that is via accelerated flow of glaciers into the sea, is something that may be potentially mitigated by cooling the ice sheet and oceans via solar geoengineering. We use two ice dynamic models driven by changes in surface mass balance from four climate models to estimate the SLR contribution from the Greenland ice sheet under the IPCC Representative Concentration Pathway (RCP) 4.5, and 8.5 and Geoengineering Model Intercomparison Project (GeoMIP) G4 scenarios. The G4 scenario adds 5&nbsp;Tg/yr sulfate aerosols to the equatorial lower stratosphere (equivalent of 1/4 the 1991 Mt&nbsp;Pinatubo SO2 eruption) to the IPCC RCP4.5 scenario which itself approximates to the greenhouse gas emission commitments agreed in Paris in 2015. Over the 2020-2090 period mass loss under G4 is about 31-38% that under RCP4.5, which is 36-48% lower than under RCP8.5. Ice lost across the grounding line under both G4 and RCP4.5 is reduced in future as the termini of many southeast Greenland outlets retreat onto bedrock above sea level. Glaciers with large low-lying catchments in the west, north and northeast of Greenland (e.g. Jakobshavn, 79N, Zachariae Isstrøm, and Petermann glaciers), discharge more ice from the ice-sheet interior under RCP4.5 than under G4. Although calving losses vary much more than SMB difference between ice dynamic models, both models point to significant ice discharge losses of between 15% and 42% across the scenarios.</p>
+<p>Sea level rise (SLR) due to surface melt and to dynamic losses from the ice sheets &ndash; that is via accelerated flow of glaciers into the sea &ndash; is something that may be potentially mitigated by cooling the ice sheet and oceans via solar geoengineering. We use two ice dynamic models driven by changes in surface mass balance (SMB) from four climate models to estimate the SLR contribution from the Greenland ice sheet under the Intergovernmental Panel on Climate Change (IPCC) Representative Concentration Pathway (RCP) 4.5, and 8.5, and Geoengineering Model Intercomparison Project G4 scenarios. The G4 scenario adds 5&nbsp;Tg/yr sulfate aerosols to the equatorial lower stratosphere (equivalent of 1/4 the 1991 Mt&nbsp;Pinatubo SO2 eruption) to the IPCC RCP4.5 scenario, which itself approximates the greenhouse gas emission commitments agreed in Paris in 2015. Over the 2020–2090 period, mass loss under G4 is about 31%–38% that under RCP4.5, which is 36%–48% lower than under RCP8.5. Ice lost across the grounding line under both G4 and RCP4.5 is reduced in the future as the termini of many southeast Greenland outlets retreat onto bedrock above sea level. Glaciers with large low-lying catchments in the west, north, and northeast of Greenland (e.g., Jakobshavn, 79N, Zachariae Isstr&oslash;m, and Petermann glaciers) discharge more ice from the ice-sheet interior under RCP4.5 than under G4. Although calving losses vary much more than the SMB difference between ice dynamic models, both models point to significant ice discharge losses of between 15% and 42% across the scenarios.</p>
 
 <hr>
 
-<p><i>Journal of Geophysical Research: Earth Surface</i> (in press).
+<p><i>Journal of Geophysical Research: Earth Surface</i> <B>128</B>&nbsp;(11),
+   e2023JF007112 (2023).
    &nbsp;
    <img style="vertical-align:middle"
-        src="../../../pictures/external_link_10x10.png"
-        alt="external link"
-        title="external link">
+        src="../../../pictures/open_access_external_link_10x14.png"
+        alt="open access/external link"
+        title="open access/external link">
    <A HREF="https://doi.org/10.1029/2023JF007112">DOI</A></p>
 
 </td></tr>
@@ -49,7 +50,7 @@ Reduced ice loss from Greenland under stratospheric aerosol injection</h2>
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2023-11-22</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2023-11-28</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
