--- a/publist.html
+++ b/publist.html
@@ -114,7 +114,8 @@ See also:
      Moore, J. C., R. Greve, C. Yue, T. Zwinger, F. Gillet-Chaulet and L. Zhao.
      2023.</a></dt>
 <dd> Reduced ice loss from Greenland under stratospheric aerosol injection.<br>
-     <i>Journal of Geophysical Research: Earth Surface</i> (in press).<br>
+     <i>Journal of Geophysical Research: Earth Surface</i> <B>128</B>&nbsp;(11),
+     e2023JF007112.<br>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="papers/2020s/23/Moore_etal_2023_JGRF.bib"><img
      style="vertical-align:middle" src="pictures/bibtex_40x14.png"    
@@ -123,10 +124,16 @@ See also:
      <a href="papers/2020s/23/Moore_etal_2023_JGRF.ris">RIS</a>
      |
      <img style="vertical-align:middle"
-          src="pictures/external_link_10x10.png"
-          alt="external link"
-          title="external link">
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
      <a href="https://doi.org/10.1029/2023JF007112">DOI</a></dd>
+     <!-- |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link"> 
+     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a> -->
 
 <dt> <a href="papers/2020s/23/Seroussi_etal_2023_TC.html">
      Seroussi, H., V. Verjans, S. Nowicki, A. J. Payne,
@@ -3659,7 +3666,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-22
+<p align="right">&nbsp;<br>Last modified: 2023-11-28
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
