HUSCAP entry added in publication list.

--- a/publist.html
+++ b/publist.html
@@ -127,13 +127,13 @@ See also:
           src="pictures/open_access_external_link_10x14.png"
           alt="open access/external link"
           title="open access/external link">
-     <a href="https://doi.org/10.1029/2023JF007112">DOI</a></dd>
-     <!-- |
+     <a href="https://doi.org/10.1029/2023JF007112">DOI</a>
+     |
      <img style="vertical-align:middle"
           src="pictures/open_access_external_link_10x14.png"
           alt="open access/external link"
           title="open access/external link"> 
-     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a> -->
+     <a href="https://hdl.handle.net/2115/90715">HUSCAP</a></dd>
 
 <dt> <a href="papers/2020s/23/Seroussi_etal_2023_TC.html">
      Seroussi, H., V. Verjans, S. Nowicki, A. J. Payne,
