--- a/papers/2020s/23/Seroussi_etal_2023_TC.html
+++ b/papers/2020s/23/Seroussi_etal_2023_TC.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 
-<HTML>
+<html>
 
-<HEAD>
+<head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <META NAME="author" CONTENT="Ralf Greve">
+  <meta name="author" content="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <TITLE>Seroussi and others (in press)</TITLE>
+  <title>Seroussi and others (2023)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
-</HEAD>
+</head>
 
-<BODY BGCOLOR="#e0e0e0" TEXT="#000000">
+<body bgcolor="#e0e0e0" text="#000000">
 
 <p><img src="../../../pictures/spacer_transparent_1x1.gif"
         alt="Spacer" width="1" height="10"></p>
@@ -22,38 +22,77 @@
        bgcolor="#ffffff" width=750>
 <tr><td>
 
-<H2 style="margin-top:0px; color:#000000;">
-Insights on the vulnerability of Antarctic glaciers from the ISMIP6
-ice sheet model ensemble and associated uncertainty</H2>
+<h2 style="margin-top:0px; color:#000000;">
+Insights into the vulnerability of Antarctic glaciers from the ISMIP6
+ice sheet model ensemble and associated uncertainty</h2>
 
-<P>H. Seroussi, V. Verjans, S. Nowicki, A. J. Payne,
-   H. Goelzer, W. H. Lipscomb, A. Abe-Ouchi,
-   C. Agosta, T. Albrecht, X. Asay-Davis, A. Barthel,
-   R. Calov, R. Cullather, C. Dumas,
-   B. K. Galton-Fenzi, R. Gladstone, N. R. Golledge,
-   J. M. Gregory, R. Greve, T. Hatterman,
-   M. J. Hoffman, A. Humbert, P. Huybrechts,
-   N. C. Jourdain, T. Kleiner, E. Larour, G. R. Leguy,
-   D. P. Lowry, C. M. Little, M. Morlighem, F. Pattyn,
-   T. Pelle, S. F. Price, A. Quiquet, R. Reese,
-   N.-J. Schlegel, A. Shepherd, E. Simon, R. S. Smith,
-   F. Straneo, S. Sun, L. D. Trusel, J. Van Breedam,
-   P. Van Katwyk, R. S. W. van de Wal, R. Winkelmann,
-   C. Zhao, T. Zhang and T. Zwinger</P>
+<p>H. Seroussi, V. Verjans, S. Nowicki, A. J. Payne, H. Goelzer,
+   W. H. Lipscomb, A. Abe-Ouchi, C. Agosta, T. Albrecht, X. Asay-Davis,
+   A. Barthel, R. Calov, R. Cullather, C. Dumas, B. K. Galton-Fenzi,
+   R. Gladstone, N. R. Golledge, J. M. Gregory, R. Greve,
+   T. Hattermann, M. J. Hoffman, A. Humbert, P. Huybrechts, N. C. Jourdain,
+   T. Kleiner, E. Larour, G. R. Leguy, D. P. Lowry, C. M. Little,
+   M. Morlighem, F. Pattyn, T. Pelle, S. F. Price, A. Quiquet, R. Reese,
+   N.-J. Schlegel, A. Shepherd, E. Simon, R. S. Smith, F. Straneo, S. Sun,
+   L. D. Trusel, J. Van Breedam, P. Van Katwyk, R. S. W. van de Wal,
+   R. Winkelmann, C. Zhao, T. Zhang and T. Zwinger</p>
 
 <hr>
 
-<H4 style="color:#000000;">Abstract</H4>
+<h4 style="color:#000000;">Abstract</h4>
 
-<P>The Antarctic Ice Sheet represents the largest source of uncertainty in future sea level rise projections, with a contribution to sea level by 2100 ranging from -5 to 43 cm of sea level equivalent under high carbon emission scenarios estimated by the recent Ice Sheet Model Intercomparison for CMIP6 (ISMIP6). ISMIP6 highlighted the different behaviors of the East and West Antarctic ice sheets, as well as the possible role of increased surface mass balance in offsetting the dynamic ice loss in response to changing oceanic conditions in ice shelf cavities. However, the detailed contribution of individual glaciers, as well as the partitioning of uncertainty associated with this ensemble, have not yet been investigated. Here, we analyze the ISMIP6 results for high carbon emission scenarios, focusing on key glaciers around the Antarctic Ice Sheet, and we quantify their projected dynamic mass loss, defined here as mass loss through increased ice discharge into the ocean in response to changing oceanic conditions. We highlight glaciers contributing the most to sea level rise as well as their vulnerability to changes in oceanic conditions. We then investigate the different sources of uncertainty and their relative role in projections, for the entire continent and for key individual glaciers. We show that, in addition to Thwaites and Pine Island glaciers in West Antarctica, Totten and Moscow University glaciers in East Antarctica present comparable future dynamic mass loss and high sensitivity to ice shelf basal melt. The overall uncertainty in additional dynamic mass loss in response to changing oceanic conditions, compared to a scenario with constant oceanic conditions, is dominated by the choice of ice sheet model, accounting for 52% of the total uncertainty of the Antarctic dynamic mass loss in 2100. Its relative role for the most dynamic glaciers varies between 14% for MacAyeal and Whillans ice streams and 56% for Pine Island Glacier at the end of the century. The uncertainty associated with the choice of climate model increases over time and reaches 13% of the uncertainty by 2100 for the Antarctic Ice Sheet, but varies between 4% for Thwaites glacier and 53% for Whillans ice stream. The uncertainty associated with the ice-climate interaction, which captures different treatments of oceanic forcings such as the choice of melt parameterization, its calibration, and simulated ice shelf geometries, accounts for 22% of the uncertainty at the ice sheet scale, but reaches 36 and 39% for Institute ice stream and Thwaites Glacier, respectively, by 2100. Overall, this study helps inform future research by highlighting the sectors of the ice sheet most vulnerable to oceanic warming over the 21st century and by quantifying the main sources of uncertainty.</P>
+<p>The Antarctic Ice Sheet represents the largest source of
+uncertainty in future sea level rise projections, with a contribution
+to sea level by 2100 ranging from &minus;5 to 43&nbsp;cm of sea level
+equivalent under high carbon emission scenarios estimated by the
+recent Ice Sheet Model Intercomparison for CMIP6 (ISMIP6). ISMIP6
+highlighted the different behaviors of the East and West Antarctic ice
+sheets, as well as the possible role of increased surface mass balance
+in offsetting the dynamic ice loss in response to changing oceanic
+conditions in ice shelf cavities. However, the detailed contribution
+of individual glaciers, as well as the partitioning of uncertainty
+associated with this ensemble, have not yet been investigated. Here,
+we analyze the ISMIP6 results for high carbon emission scenarios,
+focusing on key glaciers around the Antarctic Ice Sheet, and we
+quantify their projected dynamic mass loss, defined here as mass loss
+through increased ice discharge into the ocean in response to changing
+oceanic conditions. We highlight glaciers contributing the most to sea
+level rise, as well as their vulnerability to changes in oceanic
+conditions. We then investigate the different sources of uncertainty
+and their relative role in projections, for the entire continent and
+for key individual glaciers. We show that, in addition to Thwaites and
+Pine Island glaciers in West Antarctica, Totten and Moscow University
+glaciers in East Antarctica present comparable future dynamic mass
+loss and high sensitivity to ice shelf basal melt. The overall
+uncertainty in additional dynamic mass loss in response to changing
+oceanic conditions, compared to a scenario with constant oceanic
+conditions, is dominated by the choice of ice sheet model, accounting
+for 52% of the total uncertainty of the Antarctic dynamic mass loss in
+2100. Its relative role for the most dynamic glaciers varies between
+14% for MacAyeal and Whillans ice streams and 56% for Pine Island
+Glacier at the end of the century. The uncertainty associated with the
+choice of climate model increases over time and reaches 13% of the
+uncertainty by 2100 for the Antarctic Ice Sheet but varies between 4%
+for Thwaites Glacier and 53% for Whillans Ice Stream. The uncertainty
+associated with the ice-climate interaction, which captures different
+treatments of oceanic forcings such as the choice of melt
+parameterization, its calibration, and simulated ice shelf geometries,
+accounts for 22% of the uncertainty at the ice sheet scale but reaches
+36% and 39% for Institute Ice Stream and Thwaites Glacier,
+respectively, by 2100. Overall, this study helps inform future
+research by highlighting the sectors of the ice sheet most vulnerable
+to oceanic warming over the 21st century and by quantifying the main
+sources of uncertainty.</p>
 
 <hr>
 
-<P><I>The Cryosphere</I> (in press).
-<I>The Cryosphere Discussions</I>,
-<A HREF="https://doi.org/10.5194/tc-2023-109">doi:
-10.5194/tc-2023-109</A> (preprint).
-</P>
+<p><i>The Cryosphere</i> <b>17</b>&nbsp;(12), 5197-5217 (2023).
+   &nbsp;
+   <img style="vertical-align:middle"
+        src="../../../pictures/open_access_external_link_10x14.png"
+        alt="open access/external link"
+        title="open access/external link">
+   <a href="https://doi.org/10.5194/tc-17-5197-2023">DOI</a></p>
 
 </td></tr>
 </table>
@@ -61,11 +100,11 @@ ice sheet model ensemble and associated uncertainty</H2>
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2023-10-23</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2023-12-08</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
 
-</BODY>
+</body>
 
-</HTML>
+</html>
