--- a/publist.html
+++ b/publist.html
@@ -136,26 +136,40 @@ See also:
      <a href="https://hdl.handle.net/2115/90715">HUSCAP</a></dd>
 
 <dt> <a href="papers/2020s/23/Seroussi_etal_2023_TC.html">
-     Seroussi, H., V. Verjans, S. Nowicki, A. J. Payne,
-     H. Goelzer, W. H. Lipscomb, A. Abe-Ouchi,
-     C. Agosta, T. Albrecht, X. Asay-Davis, A. Barthel,
-     R. Calov, R. Cullather, C. Dumas,
-     B. K. Galton-Fenzi, R. Gladstone, N. R. Golledge,
-     J. M. Gregory, R. Greve, T. Hatterman,
-     M. J. Hoffman, A. Humbert, P. Huybrechts,
-     N. C. Jourdain, T. Kleiner, E. Larour, G. R. Leguy,
-     D. P. Lowry, C. M. Little, M. Morlighem, F. Pattyn,
-     T. Pelle, S. F. Price, A. Quiquet, R. Reese,
-     N.-J. Schlegel, A. Shepherd, E. Simon, R. S. Smith,
-     F. Straneo, S. Sun, L. D. Trusel, J. Van Breedam,
-     P. Van Katwyk, R. S. W. van de Wal, R. Winkelmann,
-     C. Zhao, T. Zhang and T. Zwinger. 2023.</a></dt>
-<dd> Insights on the vulnerability of Antarctic glaciers from the ISMIP6
+     Seroussi, H., V. Verjans, S. Nowicki, A. J. Payne, H. Goelzer,
+     W. H. Lipscomb, A. Abe-Ouchi, C. Agosta, T. Albrecht, X. Asay-Davis,
+     A. Barthel, R. Calov, R. Cullather, C. Dumas, B. K. Galton-Fenzi,
+     R. Gladstone, N. R. Golledge, J. M. Gregory, R. Greve,
+     T. Hattermann, M. J. Hoffman, A. Humbert, P. Huybrechts, N. C. Jourdain,
+     T. Kleiner, E. Larour, G. R. Leguy, D. P. Lowry, C. M. Little,
+     M. Morlighem, F. Pattyn, T. Pelle, S. F. Price, A. Quiquet, R. Reese,
+     N.-J. Schlegel, A. Shepherd, E. Simon, R. S. Smith, F. Straneo, S. Sun,
+     L. D. Trusel, J. Van Breedam, P. Van Katwyk, R. S. W. van de Wal,
+     R. Winkelmann, C. Zhao, T. Zhang and T. Zwinger. 2023.</a></dt>
+<dd> Insights into the vulnerability of Antarctic glaciers from the ISMIP6
      ice sheet model ensemble and associated uncertainty.<br>
-     <i>The Cryosphere</i> (in press).<br>
-     <i>The Cryosphere Discussions</i>,
-     <a href="https://doi.org/10.5194/tc-2023-109">doi:
-     10.5194/tc-2023-109</a> (preprint).</dd>
+     <i>The Cryosphere</i> <b>17</b>&nbsp;(12), 5197-5217.<br>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="papers/2020s/23/Seroussi_etal_2023_TC.bib"><img
+     style="vertical-align:middle" src="pictures/bibtex_40x14.png"    
+     alt="BibTeX"></a>
+     |
+     <a href="papers/2020s/23/Seroussi_etal_2023_TC.ris">RIS</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.5194/tc-17-5197-2023">DOI</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link"> 
+     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a></dd>
+     <!-- <i>The Cryosphere Discussions</i>,
+          <a href="https://doi.org/10.5194/tc-2023-109">doi:
+          10.5194/tc-2023-109</a> (preprint). -->
 
 <dt> <a href="papers/2020s/23/Willeit_etal_2023_CP.html">
      Willeit, M., R. Calov, S. Talento, R. Greve, J. Bernales, V. Klemann,
@@ -3666,7 +3680,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-28
+<p align="right">&nbsp;<br>Last modified: 2023-12-08
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
